--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -18,8 +18,8 @@ jobs:
           MAX_REPOS: ${{ github.repository_count }}
       - name: Commit & Push
         run: |
-          git config user.name somekindofwallflower
-          git config user.email someone.ana13@gmail.com
+          git config user.name RodrigoAnjos2004
+          git config user.email anjosrodrigo2004@gmail.com
           git add -A .
           git commit -m "Personal 3d Contributions images updated"
           git push
